app/src/main/cpp/audio_engine.h

    void setDelayEnabled(bool enabled);
    void setReverbEnabled(bool enabled);
    float getDelayTime();
    float getDelayFeedback();
    float getReverbRoomSize();
    float getReverbDamping();
    void setEffectOrder(const char** order, int count);
    // Funções para Oversampling
    void setOversamplingEnabled(bool enabled);
    void setOversamplingFactor(int factor);
    bool isOversamplingEnabled();
    int getOversamplingFactor();
    void setDistortionType(int type);
    void setDistortionMix(float mix);
    void setDelayMix(float mix);
    void setReverbMix(float mix);
    void setChorusEnabled(bool enabled);
    void setChorusDepth(float depth);
    void setChorusRate(float rate);
    void setChorusMix(float mix);
    void setFlangerEnabled(bool enabled);
    void setFlangerDepth(float depth);
    void setFlangerRate(float rate);
    void setFlangerFeedback(float feedback);
    void setFlangerMix(float mix);
    void setPhaserEnabled(bool enabled);
    void setPhaserDepth(float depth);
    void setPhaserRate(float rate);
    void setPhaserFeedback(float feedback);
    void setPhaserMix(float mix);
    void setEQEnabled(bool enabled);
    void setEQLow(float gain);
    void setEQMid(float gain);
    void setEQHigh(float gain);
    void setEQMix(float mix);
    void setCompressorEnabled(bool enabled);
    void setCompressorThreshold(float threshold);
    void setCompressorRatio(float ratio);
    void setCompressorAttack(float attack);
    void setCompressorRelease(float release);
    void setCompressorMix(float mix);
    float getDelayTime();
    float getDelayFeedback();
    float getReverbRoomSize();
    float getReverbDamping();
    bool isOversamplingEnabled();
    int getOversamplingFactor();