flutter_app/lib/engine/bindings.dart


  void setDelayEnabled(bool enabled) {
    return _setDelayEnabled(enabled);
  }

  late final _setDelayEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setDelayEnabled',
      );
  late final _setDelayEnabled = _setDelayEnabledPtr
      .asFunction<void Function(bool)>();

  void setReverbEnabled(bool enabled) {
    return _setReverbEnabled(enabled);
  }

  late final _setReverbEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setReverbEnabled',
      );
  late final _setReverbEnabled = _setReverbEnabledPtr
      .asFunction<void Function(bool)>();

  double getDelayTime() {
    return _getDelayTime();
  }

  late final _getDelayTimePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getDelayTime');
  late final _getDelayTime = _getDelayTimePtr.asFunction<double Function()>();

  double getDelayFeedback() {
    return _getDelayFeedback();
  }

  late final _getDelayFeedbackPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getDelayFeedback');
  late final _getDelayFeedback = _getDelayFeedbackPtr
      .asFunction<double Function()>();

  double getReverbRoomSize() {
    return _getReverbRoomSize();
  }

  late final _getReverbRoomSizePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getReverbRoomSize');
  late final _getReverbRoomSize = _getReverbRoomSizePtr
      .asFunction<double Function()>();

  double getReverbDamping() {
    return _getReverbDamping();
  }

  late final _getReverbDampingPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getReverbDamping');
  late final _getReverbDamping = _getReverbDampingPtr
      .asFunction<double Function()>();

  void setEffectOrder(ffi.Pointer<ffi.Pointer<ffi.Char>> order, int count) {
    return _setEffectOrder(order, count);
  }

  late final _setEffectOrderPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)
        >
      >('setEffectOrder');
  late final _setEffectOrder = _setEffectOrderPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  /// Funções para Oversampling
  void setOversamplingEnabled(bool enabled) {
    return _setOversamplingEnabled(enabled);
  }

  late final _setOversamplingEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setOversamplingEnabled',
      );
  late final _setOversamplingEnabled = _setOversamplingEnabledPtr
      .asFunction<void Function(bool)>();

  void setOversamplingFactor(int factor) {
    return _setOversamplingFactor(factor);
  }

  late final _setOversamplingFactorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'setOversamplingFactor',
      );
  late final _setOversamplingFactor = _setOversamplingFactorPtr
      .asFunction<void Function(int)>();

  bool isOversamplingEnabled() {
    return _isOversamplingEnabled();
  }

  late final _isOversamplingEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('isOversamplingEnabled');
  late final _isOversamplingEnabled = _isOversamplingEnabledPtr
      .asFunction<bool Function()>();

  int getOversamplingFactor() {
    return _getOversamplingFactor();
  }

  late final _getOversamplingFactorPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('getOversamplingFactor');
  late final _getOversamplingFactor = _getOversamplingFactorPtr
      .asFunction<int Function()>();

  void setDistortionType(int type) {
    return _setDistortionType(type);
  }

  late final _setDistortionTypePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'setDistortionType',
      );
  late final _setDistortionType = _setDistortionTypePtr
      .asFunction<void Function(int)>();

  void setDistortionMix(double mix) {
    return _setDistortionMix(mix);
  }

  late final _setDistortionMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setDistortionMix',
      );
  late final _setDistortionMix = _setDistortionMixPtr
      .asFunction<void Function(double)>();

  void setDelayMix(double mix) {
    return _setDelayMix(mix);
  }

  late final _setDelayMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setDelayMix');
  late final _setDelayMix = _setDelayMixPtr.asFunction<void Function(double)>();

  void setReverbMix(double mix) {
    return _setReverbMix(mix);
  }

  late final _setReverbMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setReverbMix');
  late final _setReverbMix = _setReverbMixPtr
      .asFunction<void Function(double)>();

  void setChorusEnabled(bool enabled) {
    return _setChorusEnabled(enabled);
  }

  late final _setChorusEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setChorusEnabled',
      );
  late final _setChorusEnabled = _setChorusEnabledPtr
      .asFunction<void Function(bool)>();

  void setChorusDepth(double depth) {
    return _setChorusDepth(depth);
  }

  late final _setChorusDepthPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setChorusDepth',
      );
  late final _setChorusDepth = _setChorusDepthPtr
      .asFunction<void Function(double)>();

  void setChorusRate(double rate) {
    return _setChorusRate(rate);
  }

  late final _setChorusRatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setChorusRate',
      );
  late final _setChorusRate = _setChorusRatePtr
      .asFunction<void Function(double)>();

  void setChorusMix(double mix) {
    return _setChorusMix(mix);
  }

  late final _setChorusMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setChorusMix');
  late final _setChorusMix = _setChorusMixPtr
      .asFunction<void Function(double)>();

  void setFlangerEnabled(bool enabled) {
    return _setFlangerEnabled(enabled);
  }

  late final _setFlangerEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setFlangerEnabled',
      );
  late final _setFlangerEnabled = _setFlangerEnabledPtr
      .asFunction<void Function(bool)>();

  void setFlangerDepth(double depth) {
    return _setFlangerDepth(depth);
  }

  late final _setFlangerDepthPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setFlangerDepth',
      );
  late final _setFlangerDepth = _setFlangerDepthPtr
      .asFunction<void Function(double)>();

  void setFlangerRate(double rate) {
    return _setFlangerRate(rate);
  }

  late final _setFlangerRatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setFlangerRate',
      );
  late final _setFlangerRate = _setFlangerRatePtr
      .asFunction<void Function(double)>();

  void setFlangerFeedback(double feedback) {
    return _setFlangerFeedback(feedback);
  }

  late final _setFlangerFeedbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setFlangerFeedback',
      );
  late final _setFlangerFeedback = _setFlangerFeedbackPtr
      .asFunction<void Function(double)>();

  void setFlangerMix(double mix) {
    return _setFlangerMix(mix);
  }

  late final _setFlangerMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setFlangerMix',
      );
  late final _setFlangerMix = _setFlangerMixPtr
      .asFunction<void Function(double)>();

  void setPhaserEnabled(bool enabled) {
    return _setPhaserEnabled(enabled);
  }

  late final _setPhaserEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setPhaserEnabled',
      );
  late final _setPhaserEnabled = _setPhaserEnabledPtr
      .asFunction<void Function(bool)>();

  void setPhaserDepth(double depth) {
    return _setPhaserDepth(depth);
  }

  late final _setPhaserDepthPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setPhaserDepth',
      );
  late final _setPhaserDepth = _setPhaserDepthPtr
      .asFunction<void Function(double)>();

  void setPhaserRate(double rate) {
    return _setPhaserRate(rate);
  }

  late final _setPhaserRatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setPhaserRate',
      );
  late final _setPhaserRate = _setPhaserRatePtr
      .asFunction<void Function(double)>();

  void setPhaserFeedback(double feedback) {
    return _setPhaserFeedback(feedback);
  }

  late final _setPhaserFeedbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setPhaserFeedback',
      );
  late final _setPhaserFeedback = _setPhaserFeedbackPtr
      .asFunction<void Function(double)>();

  void setPhaserMix(double mix) {
    return _setPhaserMix(mix);
  }

  late final _setPhaserMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setPhaserMix');
  late final _setPhaserMix = _setPhaserMixPtr
      .asFunction<void Function(double)>();

  void setEQEnabled(bool enabled) {
    return _setEQEnabled(enabled);
  }

  late final _setEQEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>('setEQEnabled');
  late final _setEQEnabled = _setEQEnabledPtr.asFunction<void Function(bool)>();

  void setEQLow(double gain) {
    return _setEQLow(gain);
  }

  late final _setEQLowPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setEQLow');
  late final _setEQLow = _setEQLowPtr.asFunction<void Function(double)>();

  void setEQMid(double gain) {
    return _setEQMid(gain);
  }

  late final _setEQMidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setEQMid');
  late final _setEQMid = _setEQMidPtr.asFunction<void Function(double)>();

  void setEQHigh(double gain) {
    return _setEQHigh(gain);
  }

  late final _setEQHighPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setEQHigh');
  late final _setEQHigh = _setEQHighPtr.asFunction<void Function(double)>();

  void setEQMix(double mix) {
    return _setEQMix(mix);
  }

  late final _setEQMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setEQMix');
  late final _setEQMix = _setEQMixPtr.asFunction<void Function(double)>();

  void setCompressorEnabled(bool enabled) {
    return _setCompressorEnabled(enabled);
  }

  late final _setCompressorEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setCompressorEnabled',
      );
  late final _setCompressorEnabled = _setCompressorEnabledPtr
      .asFunction<void Function(bool)>();

  void setCompressorThreshold(double threshold) {
    return _setCompressorThreshold(threshold);
  }

  late final _setCompressorThresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setCompressorThreshold',
      );
  late final _setCompressorThreshold = _setCompressorThresholdPtr
      .asFunction<void Function(double)>();

  void setCompressorRatio(double ratio) {
    return _setCompressorRatio(ratio);
  }

  late final _setCompressorRatioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setCompressorRatio',
      );
  late final _setCompressorRatio = _setCompressorRatioPtr
      .asFunction<void Function(double)>();

  void setCompressorAttack(double attack) {
    return _setCompressorAttack(attack);
  }

  late final _setCompressorAttackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setCompressorAttack',
      );
  late final _setCompressorAttack = _setCompressorAttackPtr
      .asFunction<void Function(double)>();

  void setCompressorRelease(double release) {
    return _setCompressorRelease(release);
  }

  late final _setCompressorReleasePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setCompressorRelease',
      );
  late final _setCompressorRelease = _setCompressorReleasePtr
      .asFunction<void Function(double)>();

  void setCompressorMix(double mix) {
    return _setCompressorMix(mix);
  }
